mobilewizard: avoid blurry icons by setting them to their size and adjust paddings
Reviewed-on: https://gerrit.libreoffice.org/80890
Tested-by: Szymon Kłos <szymon.klos@collabora.com>

--- a/loleaflet/css/mobilewizard.css
+++ b/loleaflet/css/mobilewizard.css
@@ -1,6 +1,6 @@
 span.menu-entry-icon img {
-    width: 24px;
-    margin: 4px;
+    width: 24px !important;
+    margin: 4px !important;
 }
 
 #mobile-wizard.menuwizard #mobile-wizard-content{
